--- a/package.json
+++ b/package.json
@@ -3,36 +3,13 @@
   "version": "1.2.2",
   "main": "src/index.js",
   "type": "module",
-  "bin": {
-    "create-echo-discord": "./template/cli.js"
-  },
-  "keywords": [
-    "discord",
-    "bot",
-    "discord.js",
-    "npm-package",
-    "discord-bot",
-    "discord-bot-package",
-    "javascript",
-    "node",
-    "template",
-    "cli"
-  ],
-  "files": [
-    "template/",
-    "README.md"
-  ],
   "scripts": {
     "start": "node ./src/shard.js",
     "start:dev": "node ./src/shard.js"
   },
   "author": "DevWithPranav",
-  "license": "ISC",
+  "license": "MIT",
   "description": "A CLI to create and manage Discord bots using a pre-configured template.",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/DevWithPranav/discord-bot-package.git"
-  },
   "dependencies": {
     "colors": "^1.4.0",
     "discord.js": "^14.16.3",
