Refactor bot client options and improve error handling
- Updated botClientOptions.js to reorganize allowedMentions, partials, and intents for better readability and maintainability.
- Enhanced loadHandlers.js to provide clearer warnings when handler folders are missing or invalid.
- Modified ping command to log errors more effectively and simulate error handling.
- Improved error handling in errCreate.js with better logging and user notifications.
- Refactored interactionCreate.js to streamline command and component handling with improved error messages.
- Updated ready.js to enhance logging during bot startup and status updates.
- Enhanced deployCommands.js with better logging and validation for environment variables.
- Refactored loadCommands.js to improve command loading with better error handling and logging.
- Improved loadComponents.js to provide clearer logging and validation for component loading.
- Refactored loadEvents.js to enhance event registration with better logging and error handling.
- Updated logger.js to improve logging format and configuration based on environment variables.
- Enhanced shard.js for better logging during shard lifecycle events and improved error handling.

--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@ BOT_TOKEN=Enter-your-bot-Token
 DISCORD_ID=Enter-your-bot-id
 BOT_ERROR_LOG_CHANNEL=Enter-the-log-channel
 NODE_ENV=
+
+NODE_ENV=development
+LOG_LEVEL=debug
+LOG_PATH=./logs
+SERVICE_NAME=echo-bot
