--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "description": "A CLI to create and manage Discord bots using a pre-configured template.",
   "dependencies": {
     "colors": "^1.4.0",
-    "discord.js": "^14.18.0",
+    "discord.js": "^14.0.0",
     "dotenv": "^16.4.7",
     "fs-extra": "^11.3.0",
     "generate-password": "^1.7.1",
     "inquirer": "^12.5.2",
+    "mongoose": "^8.13.2",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
     "yaml": "^2.7.1"
